// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillDisplay render snapshots 📸 BillDisplay should match snap shot when done loading + bills 1`] = `
<div
  className="bill__wrapper"
>
  <section>
    <h1>
       Bills 
    </h1>
    <div
      className="bill__container"
    >
      <div
        className="bill__card card"
      >
        <div
          className="card-body"
        >
          <h5
            className="card-title"
          >
            BILL MOCK 1
          </h5>
          <ul
            className="bill__list list-group card-text"
          >
            <li
              className="bill__list__item list-group-item list-group-item-success"
            >
              Bill Status: 
              OPEN
            </li>
            <li
              className="bill__list__item list-group-item"
            >
              Bill category: 
              string
            </li>
            <li
              className="bill__list__item list-group-item"
            >
              Bill balance: $
              12
            </li>
          </ul>
        </div>
      </div>
      <div
        className="bill__card card"
      >
        <div
          className="card-body"
        >
          <h5
            className="card-title"
          >
            BILL MOCK 2
          </h5>
          <ul
            className="bill__list list-group card-text"
          >
            <li
              className="bill__list__item list-group-item list-group-item-success"
            >
              Bill Status: 
              OPEN
            </li>
            <li
              className="bill__list__item list-group-item"
            >
              Bill category: 
              string
            </li>
            <li
              className="bill__list__item list-group-item"
            >
              Bill balance: $
              15
            </li>
          </ul>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`BillDisplay render snapshots 📸 BillDisplay should match snap shot when done loading + no bills 1`] = `
<div
  className="bill__wrapper"
>
  <p>
     No Bills Found
  </p>
</div>
`;

exports[`BillDisplay render snapshots 📸 BillDisplay should match snap shot when loading 1`] = `
<div
  className="bill__wrapper"
>
  <div
    className="billsnap-loader loader"
  >
    Loading...
  </div>
</div>
`;
